add list of LedgerCategory